[gd_scene load_steps=2 format=2]

[ext_resource path="res://ZaWarudo.gd" type="Script" id=1]

[node name="ZaWarudo" type="GridContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
columns = 2
script = ExtResource( 1 )

[node name="TurnTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 726.0
margin_bottom = 20.0
size_flags_horizontal = 3
__meta__ = {
"_edit_group_": true
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 726.0
margin_bottom = 20.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 153.0
margin_right = 573.0
margin_bottom = 20.0

[node name="Reset" type="Button" parent="MarginContainer/CenterContainer/HBoxContainer"]
margin_right = 48.0
margin_bottom = 20.0
text = "Reset"

[node name="Standard" type="Button" parent="MarginContainer/CenterContainer/HBoxContainer"]
margin_left = 52.0
margin_right = 147.0
margin_bottom = 20.0
text = "Run Standard"

[node name="Pooled" type="Button" parent="MarginContainer/CenterContainer/HBoxContainer"]
margin_left = 151.0
margin_right = 235.0
margin_bottom = 20.0
text = "Run Pooled"

[node name="Reset Stats" type="Button" parent="MarginContainer/CenterContainer/HBoxContainer"]
margin_left = 239.0
margin_right = 322.0
margin_bottom = 20.0
text = "Reset Stats"

[node name="Pause" type="Button" parent="MarginContainer/CenterContainer/HBoxContainer"]
pause_mode = 2
margin_left = 326.0
margin_right = 376.0
margin_bottom = 20.0
text = "Pause"

[node name="Stop" type="Button" parent="MarginContainer/CenterContainer/HBoxContainer"]
margin_left = 380.0
margin_right = 420.0
margin_bottom = 20.0
text = "Stop"

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 730.0
margin_right = 1024.0
margin_bottom = 20.0

[node name="InnerWarudo" type="ScrollContainer" parent="."]
margin_top = 24.0
margin_right = 726.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="InnerWarudo"]
margin_right = 726.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 730.0
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="Variables" type="GridContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_right = 294.0
margin_bottom = 152.0
columns = 4

[node name="PopLabel" type="Label" parent="VBoxContainer/Variables"]
margin_top = 5.0
margin_right = 69.0
margin_bottom = 19.0
text = "Population"
align = 2

[node name="PopEdit" type="SpinBox" parent="VBoxContainer/Variables"]
margin_left = 73.0
margin_right = 149.0
margin_bottom = 24.0
max_value = 10000.0

[node name="TurnsLabel" type="Label" parent="VBoxContainer/Variables"]
margin_left = 153.0
margin_top = 5.0
margin_right = 214.0
margin_bottom = 19.0
text = "Turns"
align = 2

[node name="TurnsEdit" type="SpinBox" parent="VBoxContainer/Variables"]
margin_left = 218.0
margin_right = 294.0
margin_bottom = 24.0

[node name="VolLabel" type="Label" parent="VBoxContainer/Variables"]
margin_top = 33.0
margin_right = 69.0
margin_bottom = 47.0
text = "Volatility"
align = 2

[node name="VolEdit" type="SpinBox" parent="VBoxContainer/Variables"]
margin_left = 73.0
margin_top = 28.0
margin_right = 149.0
margin_bottom = 52.0

[node name="DeviLabel" type="Label" parent="VBoxContainer/Variables"]
margin_left = 153.0
margin_top = 33.0
margin_right = 214.0
margin_bottom = 47.0
text = "Deviation"
align = 2

[node name="DeviEdit" type="SpinBox" parent="VBoxContainer/Variables"]
margin_left = 218.0
margin_top = 28.0
margin_right = 294.0
margin_bottom = 52.0

[node name="PoorLabel" type="Label" parent="VBoxContainer/Variables"]
margin_top = 61.0
margin_right = 69.0
margin_bottom = 75.0
text = "Poverty"
align = 2

[node name="PoorEdit" type="SpinBox" parent="VBoxContainer/Variables"]
margin_left = 73.0
margin_top = 56.0
margin_right = 149.0
margin_bottom = 80.0

[node name="RichLabel" type="Label" parent="VBoxContainer/Variables"]
margin_left = 153.0
margin_top = 61.0
margin_right = 214.0
margin_bottom = 75.0
text = "Wealthy"
align = 2

[node name="RichEdit" type="SpinBox" parent="VBoxContainer/Variables"]
margin_left = 218.0
margin_top = 56.0
margin_right = 294.0
margin_bottom = 80.0

[node name="SpecLabel" type="Label" parent="VBoxContainer/Variables"]
margin_top = 89.0
margin_right = 69.0
margin_bottom = 103.0
text = "Specialists"
align = 2

[node name="SpecEdit" type="SpinBox" parent="VBoxContainer/Variables"]
margin_left = 73.0
margin_top = 84.0
margin_right = 149.0
margin_bottom = 108.0

[node name="DiveLabel" type="Label" parent="VBoxContainer/Variables"]
margin_left = 153.0
margin_top = 89.0
margin_right = 214.0
margin_bottom = 103.0
text = "Diversity"
align = 2

[node name="DiveEdit" type="SpinBox" parent="VBoxContainer/Variables"]
margin_left = 218.0
margin_top = 84.0
margin_right = 294.0
margin_bottom = 108.0

[node name="SlowLabel" type="Label" parent="VBoxContainer/Variables"]
margin_top = 125.0
margin_right = 69.0
margin_bottom = 139.0
text = "Slow Mode"
align = 2

[node name="SlowEdit" type="CheckButton" parent="VBoxContainer/Variables"]
margin_left = 73.0
margin_top = 112.0
margin_right = 149.0
margin_bottom = 152.0

[node name="RealismLabel" type="Label" parent="VBoxContainer/Variables"]
margin_left = 153.0
margin_top = 125.0
margin_right = 214.0
margin_bottom = 139.0
text = "Realism"
align = 2

[node name="RealismEdit" type="CheckButton" parent="VBoxContainer/Variables"]
margin_left = 218.0
margin_top = 112.0
margin_right = 294.0
margin_bottom = 152.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 156.0
margin_right = 294.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 47.0
margin_top = 141.0
margin_right = 247.0
margin_bottom = 279.0
rect_min_size = Vector2( 200, 0 )

[node name="Results" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 110.0
margin_bottom = 116.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Turn: 0
ALIVE: 0
DEAD: 0
BANK: 0
PRICES: []
TOTAL NEEDS: []
TOTAL GREEDS: []"

[node name="Survivors" type="HBoxContainer" parent="VBoxContainer/CenterContainer/VBoxContainer"]
editor/display_folded = true
margin_top = 120.0
margin_right = 200.0
margin_bottom = 134.0

[node name="Alive" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer/Survivors"]
margin_right = 36.0
margin_bottom = 14.0
text = "Alive:"

[node name="Ratio" type="ProgressBar" parent="VBoxContainer/CenterContainer/VBoxContainer/Survivors"]
margin_left = 40.0
margin_right = 159.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Dead" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer/Survivors"]
margin_left = 163.0
margin_right = 200.0
margin_bottom = 14.0
text = "Dead:"

[node name="PastResults" type="HBoxContainer" parent="VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 138.0
margin_right = 200.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Standard" type="VBoxContainer" parent="VBoxContainer/CenterContainer/VBoxContainer/PastResults"]
margin_right = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Pooled" type="VBoxContainer" parent="VBoxContainer/CenterContainer/VBoxContainer/PastResults"]
margin_left = 102.0
margin_right = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
[connection signal="timeout" from="TurnTimer" to="." method="_on_TurnTimer_timeout"]
[connection signal="pressed" from="MarginContainer/CenterContainer/HBoxContainer/Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/HBoxContainer/Standard" to="." method="_on_Standard_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/HBoxContainer/Pooled" to="." method="_on_Pooled_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/HBoxContainer/Reset Stats" to="." method="_on_Reset_Stats_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/HBoxContainer/Pause" to="." method="_on_Pause_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/HBoxContainer/Stop" to="." method="_on_Stop_pressed"]
[connection signal="resized" from="InnerWarudo" to="." method="_on_InnerWarudo_resized"]
[connection signal="value_changed" from="VBoxContainer/Variables/PopEdit" to="." method="_on_PopEdit_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Variables/TurnsEdit" to="." method="_on_TurnsEdit_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Variables/VolEdit" to="." method="_on_VolEdit_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Variables/DeviEdit" to="." method="_on_DeviEdit_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Variables/PoorEdit" to="." method="_on_PoorEdit_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Variables/RichEdit" to="." method="_on_RichEdit_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Variables/SpecEdit" to="." method="_on_SpecEdit_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Variables/DiveEdit" to="." method="_on_DiveEdit_value_changed"]
[connection signal="toggled" from="VBoxContainer/Variables/SlowEdit" to="." method="_on_CheckBox_toggled"]
[connection signal="toggled" from="VBoxContainer/Variables/RealismEdit" to="." method="_on_RealismEdit_toggled"]
